# package-testing

./: .env  .gitignore  README.md  justfile  pyproject.toml
.devcontainer/: devcontainer.json  docker-compose.yml
.github/workflows/: package-build.yml  package-release.yml  version-bump.yml
scripts/: setup.sh
src/package_testing/: __init__.py
